--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       .pricing-container{
         display: flex;
         flex-direction: column;
+        height: 100%;
       }
       .pricing-plan{
         height:  150px;
