--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Flexbox Pricing Table</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Baskerville&display=swap" rel="stylesheet">
@@ -81,7 +82,6 @@
       border-radius: 20%;
       border: none;
     }
-    /* Hint: What can you do with a media query and flexbox? */
     @media (max-width: 660px) {
       .pricing-container{
         display: flex;
