--- a/index.html
+++ b/index.html
@@ -82,22 +82,30 @@
       border-radius: 20%;
       border: none;
     }
-    @media (max-width: 660px) {
+      @media (max-width: 577px) {
       .pricing-container{
         display: flex;
         flex-direction: column;
         height: 100%;
       }
       .pricing-plan{
-        height:  150px;
-        width: 10px;
+        width: 50%;
         
       }
-      *{
-        font-size: 10px;
+      .titleandprice{
+        border-radius: 5%;
       }
       .plan-features{
         gap: 3px ;
+      }
+      .premium > .plan-features{
+        padding-right: 3rem;
+      }
+      .basic > .plan-features{
+        padding-right: 5rem;
+      }
+      .plan-button{
+        font-size: 0.8rem;
       }
       .titleandprice{
         height: 4rem;
